ansible/artifacts/k8s/static/gateway.yaml
---
apiVersion: verity.mirantis.com/v1alpha1
kind: Gateway
metadata:
  name: kcm-system.internet-0
  namespace: kcm-system
spec:
  enable: True
  gateway_mode: Static BGP
  tenant: kcm-system.internet
  neighbor_ip_address: '192.167.3.1'
  neighbor_as_number: 64513
  source_ip_address: 192.167.3.253
  local_as_number: 64512
  keepalive_timer: 60
  hold_timer: 180
  connect_timer: 120
  advertisement_interval: 30
---
apiVersion: verity.mirantis.com/v1alpha1
kind: Gateway
metadata:
  name: kcm-system.internet-1
  namespace: kcm-system
spec:
  enable: True
  gateway_mode: Static BGP
  tenant: kcm-system.internet
  neighbor_ip_address: '192.167.3.1'
  neighbor_as_number: 64513
  source_ip_address: 192.167.3.252
  local_as_number: 64512
  keepalive_timer: 60
  hold_timer: 180
  connect_timer: 120
  advertisement_interval: 30
